--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="./images/favicon-32x32.png"
     />
     <title>Frontend Mentor | Fylo data storage component</title>
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="style/main.css" />
   </head>
   <body>
     <div class="page">
@@ -39,5 +39,6 @@
         </div>
       </section>
     </div>
+    <script src="main.js"></script>
   </body>
 </html>
